# anti-plagiarism

./: README.md  anti-plagiarism.cabal  stack.yaml
data/referats/: 1.txt  11.txt  2.txt  3.txt
src/: Plagiarisms.hs  Types.hs  Utils.hs
src/Data/: Plagiarism.hs
src/Data/HXR/AP/: LSH.hs
src/Data/HXR/AP/LSH/: StaticData.hs
src/Data/Plagiarism/: Gen.hs  Types.hs  Utils.hs
test/: Spec.hs
