name:                anti-plagiarism
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vonavi/anti-plagiarism#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Ivanov
maintainer:          ivvl82@gmail.com
copyright:           2017 Vladimir Ivanov
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Plagiarisms
                       Types
                       Utils
  default-language:    Haskell2010
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , random
                     , random-shuffle
                     , text
                     , transformers
  ghc-options:         -Wall -O2

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       anti-plagiarism
                     , base >= 4.7 && < 5
                     , directory
                     , filepath
                     , random
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
