name:                anti-plagiarism
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vonavi/anti-plagiarism#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Ivanov
maintainer:          ivvl82@gmail.com
copyright:           2017 Vladimir Ivanov
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.Plagiarism
                       Data.Plagiarism.Utils
  other-modules:       Data.Plagiarism.Gen
                       Data.Plagiarism.Types
  default-language:    Haskell2010
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , bifunctors
                     , containers
                     , data-default
                     , hashable
                     , random
                     , random-shuffle
                     , text
                     , transformers
                     , vector
                     , vector-instances
  ghc-options:         -Wall -O2
  default-extensions:
    TupleSections

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       anti-plagiarism
                     , base >= 4.7 && < 5
                     , directory
                     , filepath
                     , random
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
